REST API enhancement
* Create TasksController, corresponding changes:
   - Create TaskWrapper, TaskParser
   - Changes in TaskRepository
* Create QueuesController, corresponding changes
   - Create QueueWrapper, UserWrapper, QueueParser
   - Create new chatId field for simple and mixed queues
   - Adjust Queues' creating methods